fixing shadow overflow, auth error, and padding on home page stats

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -93,3 +93,11 @@ input::-webkit-date-and-time-value {
   justify-content: center;
   align-items: center;
 }
+
+.se-pull-to-refresh {
+  overflow: visible !important;
+}
+
+.se-pull-to-refresh .ptr__children {
+  overflow: visible !important;
+}
